added user create statements to sql

--- a/alienvault-asset-tracker.cfg
+++ b/alienvault-asset-tracker.cfg
@@ -31,14 +31,11 @@ plugin_id=717354
 type=detector
 enable=yes
 
-#You need to make a user
-# GRANT SELECT ON alienvault.host, to hostchecker@'127.0.0.1' IDENTIFIED BY 'some HSP';
-# GRANT SELECT ON alienvault.host_ip, to hostchecker@'127.0.0.1' IDENTIFIED BY 'some HSP';
 source=database
 source_type=mysql
 source_ip=127.0.0.1
 user=hostchecker
-password=some HSP
+password=<replace with password>
 db=alienvault
 # Appears to be in seconds, but doubled when executed on the second attempt
 sleep=60
